--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -33,12 +33,12 @@
   // padding: 15px;
 }
 
-// promoter event view
+// organizer event view
 .option-buttons {
   margin: 20px 0;
 }
 
-// promoter event index
-#promoter-event-new {
+// organizer event index
+#organizer-event-new {
   margin-bottom: 20px;
 }
