--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -4,15 +4,15 @@
 
 // image padding
 
-#promoter-pic {
+#organizer-pic {
   img  {
         margin-bottom: 15px;
   }
 }
 
-// promoter stats
+// organizer stats
 
-#promoter-stats dd, dt {
+#organizer-stats dd, dt {
   padding: 5px;
 }
 
@@ -33,7 +33,7 @@
   // margin-bottom: -100px;
 }
 
-// promoter index
+// organizer index
 
 #user-index-grid  {
   text-align: center;
