--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -6,11 +6,11 @@
 		<div class="span3">
 			<% if user_signed_in? && current_user == @event.profile.user %>
 				<%= link_to "Text Editor", "/editor" + request.path, class: "btn editor", rel: "popover", data: { content: "This will reveal a toolbar allowing you to edit text content on the page. Click the save icon in the toolbar when you're finished.", trigger: "hover", :"original-title" => "Editing Content" }, id: "edit_link" %>
-				<%= link_to "Edit Settings", edit_promoter_event_path(@event), class: "btn editor", rel: "popover", data: { content: "Edit the Event details and visibility.", trigger: "hover", :"original-title" => "Event Settings" }, id: "edit_link" %>
+				<%= link_to "Edit Settings", edit_organizer_event_path(@event), class: "btn editor", rel: "popover", data: { content: "Edit the Event details and visibility.", trigger: "hover", :"original-title" => "Event Settings" }, id: "edit_link" %>
 			<% elsif @event.users.include?(current_user) %>
 				<button class="btn btn-success requests" rel="popover" data-content="You have requested to play support at this event. Check the status of this request or cancel it in your user account." data-original-title="About requests" data-trigger="hover">Support Requested <i class="icon-check icon-white"></i></button>
 			<% elsif user_signed_in? %>
-				<%= link_to "Ask to Support", requests_path(event_id: @event.id, promoter_id: @event.profile.user_id), class: "btn btn-large requests", method: :post, rel: "popover", data: { content: "By pressing this button the Organizer of this event will receive a private message containing your contact details and your media. Click on Help &Info for more on how requests work.", trigger: "hover", :"original-title" => "About Requests" } %>
+				<%= link_to "Ask to Support", requests_path(event_id: @event.id, organizer_id: @event.profile.user_id), class: "btn btn-large requests", method: :post, rel: "popover", data: { content: "By pressing this button the Organizer of this event will receive a private message containing your contact details and your media. Click on Help &Info for more on how requests work.", trigger: "hover", :"original-title" => "About Requests" } %>
 			<% end %>
 		</div>
 		<div class="span2">
@@ -33,7 +33,7 @@
 				</div>
 				<div class="span5" align="center">
 					<h2>
-						<small><%= @promoter.try(:promoter_name) %> presents...</small> <br>
+						<small><%= @organizer.try(:promoter_name) %> presents...</small> <br>
 						<div id="artist" data-mercury="full"><%= @event.artist %></div>
 					</h2>
 					<h4>
@@ -67,8 +67,8 @@
 				<h3>About...</h3>
 				<div class="row-fluid">
 					<div class="span5" align="center">
-						<a class="thumbnail" href="<%= profile_path(@promoter) %>">
-							<%= filepicker_image_tag @promoter.try(:image), w: 100, h: 100, fit: 'crop' %>
+						<a class="thumbnail" href="<%= profile_path(@organizer) %>">
+							<%= filepicker_image_tag @organizer.try(:image), w: 100, h: 100, fit: 'crop' %>
 						</a>
 					</div>
 					<div class="span7" align="center">
@@ -77,7 +77,7 @@
 				</div>
 				<div class="row">
 					<div class="span4">
-						<h3><%= @promoter.promoter_name %> says...</h3>
+						<h3><%= @organizer.promoter_name %> says...</h3>
 						<div id="about" data-mercury="full">
 							<% if @event.about? %>
 								<%= raw @event.about %>
