--- a/app/views/notifier/_ticket_email.html.erb
+++ b/app/views/notifier/_ticket_email.html.erb
@@ -56,7 +56,7 @@
 			<td class="head-text" width="100%" valign="top">
 				<div class="page-header">
 					<h5>
-						<small>Present the QR code for addmission and/or readmission subject to the promoter's T&C</small> <br>
+						<small>Present the QR code for addmission and/or readmission subject to the organizer's T&C</small> <br>
 					</h5>
 				</div>
 			</td>
