--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -10,7 +10,7 @@
 						An email has been sent to <%= @order.email %> with your ticket. </p>
 						<p class="lead">Please note that your card won't be charged until the overall promotion of the show has succeeded. This is done to minimize bank charges should the show not reach its funding target in the alloted time. </p>
 						<p class="lead">If you don't have sufficient funds available when the charge is applied, the vendor will automatically retry the charge three times and then cancel your order. </p>
-						<p class="lead">In the event of a promoter / artist cancellation, i.e. a refund situation, you will be repaid the full amount of the charge, <%= link_to "full T&C", info_path %>. </p>
+						<p class="lead">In the event of a organizer / artist cancellation, i.e. a refund situation, you will be repaid the full amount of the charge, <%= link_to "full T&C", info_path %>. </p>
 					</p>
 				</header>
 				<% unless user_signed_in? %>
