--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -41,7 +41,7 @@
       <div class="section-box">
         <div class="label-box">Who is it for?</div>
           <p class="">Personally, I want to live a full and satisfying artistic life without having to deal with the industry (<a href="//seocahill.com">more in this blog post</a>). 100 Motels was developed in that context.</p>
-          <p>However this doesn't preclude anyone from using it who still wants to operate inside the industry - independent or commercial artists, promoters, venue-owners, labels, record-stores, radio-stations, journalists or regular civilians. </p>
+          <p>However this doesn't preclude anyone from using it who still wants to operate inside the industry - independent or commercial artists, organizers, venue-owners, labels, record-stores, radio-stations, journalists or regular civilians. </p>
           <p>There are no arbitrary rules like you'll see on other funding websites.</p>
       </div>
 
