--- a/app/views/organizer/events/_form.html.erb
+++ b/app/views/organizer/events/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [:promoter, @event], :html => { class: 'form-horizontal' } do |f| %>
+<%= simple_form_for [:organizer, @event], :html => { class: 'form-horizontal' } do |f| %>
 
 
   <fieldset>
