--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -8,8 +8,8 @@
 <div class="row">
   <div class="span12">
     <ul class="breadcrumb">
-      <li><i class="icon-home"></i> <%= link_to "Organizer Home", promoter_root_path %><span class="divider">/</span></li>
-      <li><%= link_to "All Events", promoter_events_path %><span class="divider">/</span></li>
+      <li><i class="icon-home"></i> <%= link_to "Organizer Home", organizer_root_path %><span class="divider">/</span></li>
+      <li><%= link_to "All Events", organizer_events_path %><span class="divider">/</span></li>
       <li><a href="" class="active">Event Orders</a></li>
       <li></li>
     </ul>
@@ -27,10 +27,10 @@
         <% elsif current_user.profile %>
           <%= link_to image_tag('blue.png'), user_omniauth_authorize_path(:stripe_connect), class: "" %>
         <% end %>
-        <%= link_to "Generate pdf", promoter_event_path(@event, format: "pdf"), class: "btn" %>
+        <%= link_to "Generate pdf", organizer_event_path(@event, format: "pdf"), class: "btn" %>
       </div>
-      <%= hidden_field_tag "promoter", current_user.profile.id %>
-      <table class="table table-striped table-bordered" id="promoter-customers">
+      <%= hidden_field_tag "organizer", current_user.profile.id %>
+      <table class="table table-striped table-bordered" id="organizer-customers">
         <thead>
           <tr>
             <th>
