--- a/app/views/organizer/profiles/_form.html.erb
+++ b/app/views/organizer/profiles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [:promoter, @profile], :html => { class: 'form-horizontal' } do |f| %>
+<%= simple_form_for [:organizer, @profile], :html => { class: 'form-horizontal' } do |f| %>
   <%#= f.error_messages %>
 
   <fieldset>
@@ -13,7 +13,7 @@
 
     <div class="form-actions">
         <%= f.submit nil, class: "btn btn-primary" %>
-        <%= link_to 'Cancel', promoter_root_path, class: 'btn' %>
+        <%= link_to 'Cancel', organizer_root_path, class: 'btn' %>
     </div>
   </fieldset>
 
