--- a/app/views/organizer/profiles/index.html.erb
+++ b/app/views/organizer/profiles/index.html.erb
@@ -14,7 +14,7 @@
       </header>
       <form class="form">
         <div class="">
-          <%= select_tag "promoter_city", options_for_select(@options), prompt: "Filter by City"  %>
+          <%= select_tag "organizer_city", options_for_select(@options), prompt: "Filter by City"  %>
           <br>
           <h4>Sort your results</h4> <br>
           <ul class="nav nav-list">
@@ -49,7 +49,7 @@
                 <%= up.profile.promoter_name || up.name  %>
               </h3>
               <p><%= up.profile.quick_profile || "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, ." %>.</p>
-              <p><%= button_to "View Profile", promoter_profile_path(up.profile), method: :get, class: "btn button-primary" %></p>
+              <p><%= button_to "View Profile", organizer_profile_path(up.profile), method: :get, class: "btn button-primary" %></p>
             </li>
             <% end %>
           </ul>
