--- a/app/views/organizer/requests.html.erb
+++ b/app/views/organizer/requests.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="span2">
-    <p>    <%= link_to "Back", promoter_root_path, class: "btn btn-large" %></p>
+    <p>    <%= link_to "Back", organizer_root_path, class: "btn btn-large" %></p>
   </div>
   <div class="span12">
     <div class="tabbable tabs">
