--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="span3"><p class="lead">Your Current Requests</p></div>
     <div class="span1">
-      <p><%= link_to "Home", promoter_root_path, class: "btn btn-block" %></p>
+      <p><%= link_to "Home", organizer_root_path, class: "btn btn-block" %></p>
     </div>
     <div class="span1">
       <div class="btn-group">
