organizer index working ok

--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -46,7 +46,7 @@
                 <% end %>
               </a>
               <h3>
-                <%= profile.organizer_name || "organizer name"  %>
+                <%= profile.promoter_name || "organizer name"  %>
               </h3>
             </li>
             <% end %>
