--- a/app/views/organizer/events/index.html.erb
+++ b/app/views/organizer/events/index.html.erb
@@ -1,19 +1,18 @@
-<div class="page-header"><h3>Your Events</h3></div>
+<div class="page-header"><h3>Organizer Dash</h3>
+  </div>
   <div class="row">
-    <div class="span4">
-      <ul class="breadcrumb">
-        <li><i class="icon-home"></i> <%= link_to "Organizer Home", organizer_root_path %><span class="divider">/</span></li>
-        <li><a href="" class="active">All Events</a></li>
+    <div class="span2">
+      <ul class="nav nav-tabs nav-stacked">
+        <li><%= link_to "Home", organizer_root_path %></li>
+        <li><%= link_to "New Event", new_organizer_event_path %></li>
+        <li><%= link_to "Edit Profile", edit_organizer_profile_path(@profile) %></li>
+        <li><%= link_to %></li>
+        <li><%= link_to %></li>
+        <li><%= link_to %></li>
+
       </ul>
     </div>
-  </div>
-  <div class="row">
-    <div class="span2" id="organizer-event-new">
-      <%= link_to "New Event", new_organizer_event_path, class: "btn" %>
-    </div>
-  </div>
-  <div class="row">
-    <div class="span12">
+    <div class="span10">
       <table class="table table-striped">
         <thead>
           <tr>
