--- a/app/views/layouts/organizer.html.erb
+++ b/app/views/layouts/organizer.html.erb
@@ -69,16 +69,16 @@
             <%= content_tag :div, value, :id => "flash_#{key}" if value.is_a?(String) %>
           </div> <!-- /flash -->
         <% end %>
-        <div class="page-header"><h3>Organizer Admin</h3></div>
         <div class="row-fluid">
           <div class="span2">
+            <h4>Admin Menu</h4>
             <ul class="nav nav-tabs nav-stacked">
               <li><%= link_to "Home", organizer_root_path %></li>
               <li><%= link_to "New Event", new_organizer_event_path %></li>
               <li><%= link_to "Edit Profile"  %></li>
-              <li><%= link_to %></li>
-              <li><%= link_to %></li>
-              <li><%= link_to %></li>
+              <li><%= link_to "Your Sales" %></li>
+              <li><%= link_to "Your Events" %></li>
+              <li><%= link_to "Your Requests", organizer_requests_path %></li>
             </ul>
           </div> <!-- /sidebar -->
           <div class="span9 offset1">
