--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,25 +4,25 @@
 					<div class="jumbotron">
 						<h1>
 						 100 Motels<br>
-						 <small>Hit the Road</small> <br>
-						 <%= link_to "WTF", new_user_registration_path, class: "btn btn-large btn-inverse" %>
+						 <small>is for organizing and funding live music</small> <br>
+						 <%= link_to "Info & Signup", new_user_registration_path, class: "btn btn-large btn-inverse" %>
 						</h1>
 					</div>
 				</div> <!-- /navbar -->
-				<!-- <div class="row-fluid headlines">
+				<div class="row-fluid headlines">
 					<div class="span4">
-	          <h2>Funding</h2>
-	          <p>Fund a live show without incurring fees or charges. When you're happy with the numbers get your money.</p><br>
+	          <h2>Money</h2>
+	          <p>Sell as many tickets as you like without incurring fees or charges - no time limits. The charge is just 1% + bank fees to draw down the cash from your ticket sales.</p><br>
 	          <p align="center"><%= link_to "Learn More »", info_path(anchor: "money"), class: "btn" %></p>
 	        </div>
 					<div class="span4">
-	          <h2>Ticketing</h2>
-	          <p>A modern ticketing platform with one-click purchases, QR coded tickets and a mobile app 'Doorman' for keeping track of things on the night.</p> <br>
+	          <h2>Tickets</h2>
+	          <p>A web ticketing platform with one-click purchases, QR coded tickets and other handy stuff. Mobile app 'Doorman' for keeping track of things on the night is a WIP.</p> <br>
 	          <p align="center"><%= link_to "Learn More »", info_path(anchor: "organizing"), class: "btn" %></p>
 	        </div>
 					<div class="span4">
-	          <h2>Organizing</h2>
-	          <p>Organize a live show for the artist or artists of your choosing. Find an organizer to put on a show for you or play as support for other artists. </p><br>
+	          <h2>Shows</h2>
+	          <p>Organize one yourself or browse our listing for someone to do it for you. You can also request to support artists headlining existing shows. </p><br><br>
 	          <p align="center"><%= link_to "Learn More »", info_path(anchor: "how"), class: "btn" %></p>
 	        </div>
 				</div> <!-- /headlines -->
