--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -9,6 +9,13 @@
 .jumbotron {
   margin: 60px 0;
   text-align: center;
+  .btn  {
+    padding: 19px 24px;
+    color: #FFFFFF;
+    font-size: 19px;
+    margin: 40px;
+  }
+
 }
 
 .jumbotron h1 {
