--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 					<div class="jumbotron">
 						<h1>
 						 100 Motels<br>
-						 <small>is for organizing and funding live music</small> <br>
+						 <small>organize underground music</small> <br>
 						 <%= link_to "Info & Signup", new_user_registration_path, class: "btn btn-large btn-inverse" %>
 						</h1>
 					</div>
