--- a/app/views/organizer/events/index.html.erb
+++ b/app/views/organizer/events/index.html.erb
@@ -10,26 +10,28 @@
           <th>Cash in Bank</th>
         </tr>
       </thead>
-      <tbody>
-        <% @events.each do |event| %>
-        <tr>
-          <td><%= link_to event.artist, event_path(event), class: "" %></td>
-          <td> <%= distance_of_time_in_words(Time.now, event.date) %> </td>
-          <td> <%= event.orders.total.to_a.sum { |item| item.quantity} %> /
-               <%= event.target %> Tickets
-          </td>
-          <td> <%= event.orders.pending.to_a.sum { |item| item.quantity} %> Tickets </td>
-          <td> <%= number_to_currency(event.orders.paid.to_a.sum { |order| order.banked}) %> </td>
-          <td >
-            <div class="btn-group pull-right">
-              <%= link_to raw('<i class="icon-list"></i>'), [:organizer, event], class: "btn" %>
-              <%= link_to raw('<i class="icon-eye-open"></i>'), event_path(event), class: "btn" %>
-              <%= link_to raw('<i class="icon-pencil"></i>'), edit_organizer_event_path(event), class: "btn" %>
-            </div>
-          </td>
-        </tr>
-        <% end %>
-      </tbody>
+      <% if current_user.profile %>
+        <tbody>
+          <% @events.each do |event| %>
+          <tr>
+            <td><%= link_to event.artist, event_path(event), class: "" %></td>
+            <td> <%= distance_of_time_in_words(Time.now, event.date) %> </td>
+            <td> <%= event.orders.total.to_a.sum { |item| item.quantity} %> /
+                 <%= event.target %> Tickets
+            </td>
+            <td> <%= event.orders.pending.to_a.sum { |item| item.quantity} %> Tickets </td>
+            <td> <%= number_to_currency(event.orders.paid.to_a.sum { |order| order.banked}) %> </td>
+            <td >
+              <div class="btn-group pull-right">
+                <%= link_to raw('<i class="icon-list"></i>'), [:organizer, event], class: "btn" %>
+                <%= link_to raw('<i class="icon-eye-open"></i>'), event_path(event), class: "btn" %>
+                <%= link_to raw('<i class="icon-pencil"></i>'), edit_organizer_event_path(event), class: "btn" %>
+              </div>
+            </td>
+          </tr>
+          <% end %>
+        </tbody>
+      <% end %>
     </table>
   </div>
 </div>
